export interface IBackofficeUserDTO {
    name: string
    email: string
    phoneNumber: string
    password: string
}
