export interface ICreatedBackofficeUserDTO {
    name: string
    email: string
    phoneNumber: string
    authToken?: string
}
